<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    android:padding="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user"
            android:text="@string/test_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:textSize="@dimen/material_body" />

        <TextView
            android:id="@+id/title"
            android:text="@string/test_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@id/user"
            android:gravity="start"
            android:layout_toStartOf="@id/user"
            android:padding="5dp"
            android:textColor="@color/material_lightBlue_500"
            android:textSize="@dimen/material_sub_head" />

        <TextView
            android:id="@+id/time"
            android:text="@string/test_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_margin="8dp"
            android:textColor="@color/material_grey_500"
            android:textSize="@dimen/material_caption" />
    </RelativeLayout>

</android.support.v7.widget.CardView>